--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -63,6 +63,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-light" href="{% url 'foodtruckapp:display' %}">Display</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="{% url 'foodtruckapp:controller' %}">Controller</a>
+                </li>
                 <li class="nav-item pr-5">
                     <a class="btn btn-bd-download text-light text-decoration-none"
                         style="background-color:#093649; font-weight:bold; border: 2px solid white"
