--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,15 +4,19 @@
 
 
 
-<footer class="container-fluid bg-dark " id="foot">
+<footer class="container-fluid " id="foot">
     <div class="row">
-        <div class="col-12  pb-5 d-flex justify-content-center align-items-center" order: 1>
+        <div class="col-12 mt-4 pt-4 d-flex justify-content-center align-items-center" order: 1>
 
         </div>
         <div class="col-12 gap-5 pb-3 d-flex justify-content-around align-items-center" order: 2>
-            <a href="{% url 'user_app:logout' %}" class="link-light text-decoration-none" id="link">Logout</a>
-            <a href="#" class="link-light text-decoration-none" id="link">Browse</a>
-            <a href="#" class="link-light text-decoration-none" id="link">About Us</a>
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'user_app:logout' %}" class="link-light text-decoration-none" id="link">Logout</a>{% endif %}
+            <a href="#" class="link-dark text-decoration-none" id="link">Menu</a>
+            <a href="#" class="link-dark text-decoration-none" id="link">Contact</a>
+            <a href="#" class="link-dark text-decoration-none" id="link">About Us</a>
+            <a href="#" class="link-dark text-decoration-none" id="link">Where Am I?</a>
+
         </div>
     </div>
 </footer>
