--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,13 +34,16 @@
 }
 
 #fixed-nav {
-    background-color:#093649;
-    z-index:999;
-    overflow: visible;
+    /* background-color:#093649; */
+    /* z-index:999; */
+    /* overflow: visible; */
     /* position: absolute; */
-    position: fixed; 
+    /* position: fixed;  */
     top: 0; 
     width: 100%;
+    height:5%;
+    /* margin-bottom:auto; */
+    /* border-bottom: .25px solid black; */
    
 
 }
@@ -57,56 +60,26 @@ background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/s
 
 
 html, body {
-    position: relative;
+    /* position: relative; */
     height: 100%;
-    z-index:1
+    /* z-index:1 */
 }
 
 body {
     background: #eee;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-family: fontname6;
+    font-size: 20px;
     color: #000;
     margin: 0;
     padding: 0;
     z-index:1
 }
-
-.swiper {
-    width: 100%;
-    height: 100%;
-    z-index:1
+#hero {
+    /* position:absolute; */
+    left:12.6%;
+    height: 75%;
+    font-family: fontname6;
 }
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #d7dfe1;
-
-/* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    z-index:1
-}
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index:1
-}
-
 #tester {
 
     height: 78px;
@@ -115,16 +88,7 @@ body {
     z-index:1;
 }
 
-/* #custom-card-1 {
-    
-    /* border-radius: 0px; */
-    /* position: fixed; */
-    /* height:100vh; */
-    /* padding:0; */
-    /* z-index:2; */
-    /* top: 0px; */
-    /* width: 8% */
-/* } */
+
 
 #no-pad {
 
@@ -287,6 +251,11 @@ body {
     
 }
 
+
+#dotted-line {
+    border-bottom: 1px dotted black;
+}
+
 #ooooooo {
     width: 20rem;
     height:3rem;
@@ -300,3 +269,6 @@ body {
 #sign-body {
     background-color: #ff80ff;
 }
+#copyright {
+        font-size:10px;
+    }
