--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,14 @@
 
   <body>
     {% include 'navbar.html' %}
-    
+    <section height="100vh" id="hero" class="container-fluid">
+      <div>
+        a
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   </body>
+  {% include 'footer.html' %}
+
 </html>
