docker and domain deploy test

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,7 +15,7 @@
             <a href="#" class="link-dark text-decoration-none" id="link">Menu</a>
             <a href="#" class="link-dark text-decoration-none" id="link">Contact</a>
             <a href="#" class="link-dark text-decoration-none" id="link">About Us</a>
-            <a href="#" class="link-dark text-decoration-none" id="link">Where Am I?</a>
+            <a href="{% url 'foodtruckapp:whereami' %}" class="link-dark text-decoration-none" id="link">Where Am I?</a>
 
         </div>
     </div>
