--- a/templates/user_app/login.html
+++ b/templates/user_app/login.html
@@ -40,17 +40,23 @@
                     <button class="w-100 btn btn-lg btn-primary mb-5" style="background-color:#62B5E5;" type="submit">Log
                         In
                     </button>
-                    <div class="pt-0">
-                        <p id="dotted-line" class="pt-2" style="text-decoration:none">
-                            First Time Here?..
-                        </p> 
-                        <button class="w-100 btn btn-lg btn-primary" style="background-color:#1a1a1a;" type="submit">
-                            Get An Account.
-                        </button>
-                        
-                    </div>
                     {% csrf_token %}
                 </form>
+                <div class="pt-0">
+                    <p id="dotted-line" class="pt-2" style="text-decoration:none">
+                        First Time Here?..
+                    </p> 
+                    <form action="{% url 'user_app:register' %}" method="GET">
+
+                        <a >
+                            <button class="w-100 btn btn-lg btn-primary" style="background-color:#1a1a1a;" type="submit">
+                                Get An Account.
+                            </button>
+                        </a>
+                    </form>
+
+                    
+                </div>
             </div>
 
         </div>
