--- a/templates/user_app/login.html
+++ b/templates/user_app/login.html
@@ -15,7 +15,7 @@
     <section  class="container-fluid">
         <div class='pt-4 mt-3' id="splash">
             <a href="{% url 'user_app:base' %}">
-                <img id='company-name' src="/static/images/company_name.png" alt="truck_name" >
+                <img id='company-name' src="/static/images/company_nam.png" alt="" >
             </a>    
         </div>
         <div class="d-flex justify-content-center align-items-center">
